--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(any_false)
 export(ci_mean)
 export(diff_cols)
 export(fold)
+export(report_diff)
 export(same_cols)
 export(sift)
 importFrom(magrittr,"%>%")
