--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,15 @@ LazyData: true
 Depends: R (>= 4.2.0)
 Imports:
     datasets (>= 4.2.0),
+    desiderata (>= 0.43.0),
+    dplyr (>= 1.0.0),
+    haven (>= 2.5.0),
+    Hmisc (>= 4.7),
     labelled (>= 2.10.0),
+    magrittr (>= 2.0.0),
+    stringr (>= 1.5.0),
     usethis (>= 1.5.0)
+Remotes:
+    github::DesiQuintans/desiderata
 RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
