Add sift() back from desiderata.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(copy_definition)
 export(fig_number)
 export(map_number)
 export(shrink_redcap_cols)
+export(sift)
 export(tbl_number)
 export(warc_dirs)
 export(with_label)
