--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,18 +8,19 @@ Description: This package contains functions for working with medical data.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 4.2.0)
+Depends: R (>= 3.4.0)
 Imports:
-    datasets (>= 4.2.0),
-    desiderata (>= 0.43.0),
-    dplyr (>= 1.0.0),
-    glue (>= 1.6.0),
-    haven (>= 2.5.0),
-    Hmisc (>= 4.7),
-    labelled (>= 2.10.0),
-    magrittr (>= 2.0.0),
-    stringr (>= 1.5.0),
-    usethis (>= 1.5.0)
+    cli,
+    datasets,
+    dplyr,
+    glue,
+    haven,
+    Hmisc,
+    labelled,
+    magrittr,
+    purrr,
+    stringr,
+    usethis
 Remotes:
     github::DesiQuintans/desiderata
 RoxygenNote: 7.2.2
