--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(copy_dataframe_labels)
 export(copy_definition)
 export(fig_number)
 export(map_number)
+export(report_dims)
+export(report_missingness)
+export(report_setdiff)
 export(set_labels)
 export(shrink_redcap_cols)
 export(tbl_number)
